# AIDEN

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.command  run.bat  run.command
include/: data_set.h  gbuffer_ogl.h  image.h  loader.h  log.h  os.h  os_osx.h  os_win32.h  resource_manager.h  shaders.h  test2.h
learning/: e_ml_test1.py
libs/win/: tensorflow.def  tensorflow.exp  tensorflow.lib
res/: test.json
res/data/: set_manifest.json
res/data/test1/: manifest.json  test2.glb  test3.glb
res/data/test2/: manifest.json  test1.glb
src/: #os_win32.cpp#  .#os_win32.cpp  data_set.cpp  gbuffer_ogl.cpp  image.cpp  loader.cpp  log.cpp  os_osx.cpp  os_win32.cpp  resource_manager.cpp  shaders.cpp  test.cpp  test2.cpp
